welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:8: error: type mismatch;
 found   : Int
 required: Boolean
		x
                ^